# speckle-examples

./: .gitignore  LICENSE  README.md  speckle-examples.code-workspace
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: PR_TEMPLATE.md
.github/workflows/: close-issue.yml  open-issue.yml
dotnet/: .gitignore
dotnet/custom-gh-converter/CustomSpeckleObjects/: CustomObject.cs  (+2 more)
dotnet/dotnet-speckle-starter/: Program.cs  Readme.md  dotnet-speckle-starter.csproj
dotnet/dui-speckle-starter/: ConnectorBindingsStarter.cs  Program.cs  dui-speckle-starter.csproj
javascript/speckle-js-starter/: Readme.md  app.js  index.html  speckleQueries.js  speckleUtils.js  styles.css
python/: images-to-mesh.py  pyproject.toml
python/diffing-cloud-function/: main.py  requirements.txt
python/speckle-data-pack/: README.md  SDP_1_room data from model.ipynb  SDP_2_room data from project.ipynb  SDP_3_room data with pandas.ipynb  SDP_4_material data with pandas.ipynb  SDP_5_windows data with pandas.ipynb
python/speckle-jupyter-notebooks/: boxes.ipynb  contours.ipynb  diffing-part1.ipynb  diffing-part2.ipynb  grasshopper-null-units.ipynb  grasshopper-to-jupyter.ipynb  jupyter-hops.ipynb  pyproject.toml  revit.ipynb  revit_amended.ipynb  speckle-federator.ipynb  stream-and-teams.ipynb  users and roles.ipynb
python/speckle-py-starter/: 01_send_receive.py  02_create_and_send.py  readme.md  send_receive.py
python/speckle-py-starter/Jupyter/: Grasshopper to Jupyter Example.ipynb
python/streamlit/: pyproject.toml
(+2 files in other folders)
